# meta-signal-cloud

./: AGENTS.md  ARCHITECTURE.md  Cargo.toml  INTENT.md  build.rs  flake.nix
examples/: register-account.nota
schema/: lib.asschema  lib.schema  meta-signal-cloud.asschema  meta-signal-cloud.schema  owner-signal-cloud.concept.schema
src/: lib.rs
src/schema/: lib.rs  meta_signal_cloud.rs
tests/: channel.rs
