[package]
name         = "meta-signal-cloud"
version      = "0.1.0"
edition      = "2024"
rust-version = "1.85"
license      = "MIT OR Apache-2.0"
description  = "Meta (owner-only policy) Signal contract for cloud provider API authority and policy, schema-derived."
publish      = false

[lib]
name = "meta_signal_cloud"
path = "src/lib.rs"

[features]
default = []
nota-text = ["dep:nota-next"]

[dependencies]
nota-next = { git = "https://github.com/LiGoldragon/nota-next.git", branch = "main", optional = true }
rkyv = { version = "0.8", default-features = false, features = ["std", "bytecheck", "little_endian", "pointer_width_32", "unaligned"] }

[build-dependencies]
schema-next = { git = "https://github.com/LiGoldragon/schema-next.git", branch = "main" }
schema-rust-next = { git = "https://github.com/LiGoldragon/schema-rust-next.git", branch = "main" }

[lints.rust]
unsafe_code = "forbid"
unused      = { level = "warn", priority = -1 }
dead_code   = "warn"
